compiler/testData/diagnostics/tests/annotations/contextReceiverOnFunction.fir.kt
// LANGUAGE: +ContextReceivers
// ISSUE: KT-72863

@Target(AnnotationTarget.TYPE)
annotation class Anno(val position: String)

<!CONTEXT_RECEIVERS_DEPRECATED!>context<!>(List<@Anno("context receiver type $prop") Int>)
fun foo() {

}

const val prop = "str"
